--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- ... your pom.xml content ... -->
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wallet.qa</groupId>
     <artifactId>wallet-automation</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <!-- Playwright for Java -->
@@ -24,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-           <artifactId>cucumber-junit</artifactId>
+            <artifactId>cucumber-junit</artifactId>
             <version>7.14.0</version>
             <scope>test</scope>
         </dependency>
@@ -77,12 +81,46 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
-    
-<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
-<dependency>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-clean-plugin</artifactId>
-    <version>3.5.0</version>
+
+        <!-- Maven Clean Plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+        <dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka-clients</artifactId>
+    <version>3.7.0</version> <!-- or latest -->
 </dependency>
-</dependencies>
+<!-- JUnit Platform Suite API -->
+<dependency>
+    <groupId>org.junit.platform</groupId>
+    <artifactId>junit-platform-suite-api</artifactId>
+    <version>1.10.2</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- Cucumber JUnit Platform Engine -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit-platform-engine</artifactId>
+    <version>7.14.0</version>
+    <scope>test</scope>
+</dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
